Added the same changes as on the "old" fork. :)

--- a/translations/en.json
+++ b/translations/en.json
@@ -3,5 +3,6 @@
   "MIN": "min",
   "CAST": "Cast",
   "DIRECTOR": "Director",
-  "RATINGS": "ratings"
+  "RATINGS": "ratings",
+  "GENRE": "Genre"
 }
